# PyAutoLens

./: .coverage.jammy-Latitude-E7470.4593.393241  .gitattributes  .gitignore  .readthedocs.yaml  CITATIONS.rst  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Coordinates  Dockerfile  INSTALL.notes  LICENSE  LightDefl_Computation  LightMass_Description  MANIFEST.in  Makefile  PLOT_REFACTOR_PLAN.md  README.html  README.md  README.rst  SourcePlaneAndPixelization  Units  citations.bib  citations.md  citations.tex  conf.py  convert.py  definitions.md  eden.ini  index.rst  libraries.txt  make.bat  mess.py  optional_requirements.txt  pyproject.toml  readthedocs.yaml  readthedocs.yml  release.sh  requirements.txt  requirements_build.txt  (+10 more)
.github/workflows/: main.yml
.ipynb_checkpoints/: AutoLensJyp-checkpoint.ipynb  test-checkpoint.ipynb
AutoLensPy2/local/: bin  include  lib
Data/PrepLens/: slacs_5_post.fits
LensData/: ArrayTools.py  FitsTools.py  ImageClass.py  Visualize.py  mess.py  test_ArrayTools.py
LensObj/MassProfile/: test_MassProfile.py
PrepLens/: DataObj.py  PrepImage.py  test_DataObj.py  test_PrepImage.py
Tools/: ImageTools.py  test_ImageTools.py
_build/doctrees/: environment.pickle  index.doctree
_build/html/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
auto_lens/: LightTest.py  MultiNestTools.py  analysis.py  covariance_matrix.py  decorator.py  density_plot.py  exc.py  frame_convolution.py  galaxy.py  galaxy_prior.py  image.py  instrumentation.py  model_mapper.py  multinest.py  non_linear.py  prior.py  profile.py  profiling.py  ray_tracing.py  test.py  test_MultiNestTools.py  test_analysis.py  test_covariance_matrix.py  test_decorator.py  test_frame_convolution.py  test_galaxy.py  test_galaxy_prior.py  test_image.py  test_model_mapper.py  test_multi_nest_tools.py  test_multinest.py  test_non_linear.py  test_prior.py  test_profile.py  test_ray_tracing.py
auto_lens/analysis/: analyse.py  analysis.py  analysis_data.py  analysis_image.py  covariance_matrix.py  fitting.py  galaxy.py  galaxy_prior.py  model_mapper.py  non_linear.py  pipeline.py  pipeline_library.py  pipline.py  ray_tracing.py  ray_tracing_plan  source_plane.py  test_analysis_data.py  test_analysis_image.py  test_covariance_matrix.py  test_frame_convolution.py  test_galaxy.py  test_galaxy_prior.py  test_model_mapper.py  test_ray_tracing.py  test_source_plane.py
auto_lens/config/: config.py  light_profile.ini  light_profiles.ini  mass_profiles.ini
auto_lens/config_test/: profile.ini  profiles.ini
auto_lens/data/: test_image.py
auto_lens/imaging/: analysis_data.py  analysis_grids.py  analysis_image.py  data.py  grids.py  grids_old.py  grids_plan  hyper_image.py  image.py  imaging.py  mask.py  scaled_array.py  (+10 more)
autolens/: __init__.py  __main__.py  aggregator.py  cli.py  conf.py  config.py  decorator_util.py  dimensions.py  exc.py  fixtures.py  mock.py  text_util.py
autolens.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
config/: general.ini  label.ini  labels.ini  non_linear.ini
data/: analysis_data.py  image.py  test_analysis_data.py  test_image.py
dockerfiles/: .dockerignore  Dockerfile  README.md  bashrc  entrypoint.sh
docs/: Analysis  Coordinates  DurhamMaySummary.md  LightDefl_Computation  LightMass_Description  LikelihoodFunction  Noise  Pipeline_Examples  Pipeline_Profile_Only  PriorCode  Priors  RayTracing  SLACS_Data  SourcePlaneAndPixelization  Units  api.rst  conf.py  index.rst  installation.rst  papers.rst  requirements.txt
example/: basic.py  doc  profile.py  subhalo.py
examples/: density_plot.py  density_plot_upper_lower_backup.py  file_converter.py  pipeline_api_idea.py  sisphere.py
files/: citations.bib  citations.md  citations.tex  to_do_list
howtolens/: 1_imaging.py  1_lensing.py  1_ray_tracing.py  2_ray_tracing.py  3_imaging.py
paper/: README.md  paper.bib  paper.json  paper.md
paper_plots/: density_plot.py  density_plot_1Sersic.py  density_plot_2Aligned.py  density_plot_LMDM.py  density_plot_LTM2R.py  density_plot_LTMR.py  density_plot_tools.py  density_plot_upper_lower_backup.py  density_power_law_plot.py  file_converter.py  pdf_plots.py  sisphere.py
pipelines/: runner.py  source_pix_pipeline.py
profiling/: Fortran_Baselines  analysis.py  profiling_data.py  results.md  simulate_image.py  tools.py
scripts/: chi_sq_noise.py  convert_pipeline.sh  dh_simplex_fit_lens_sersic.py  grid_demo.py  light_profile_analysis.py  lm_fit_lens_galaxy.py  lm_fit_lens_sersic.py  multinest_fit_lens_galaxy.py  multinest_fit_lens_sersic.py  multinest_fit_source_galaxy.py  non_linear_fit_lens_galaxy.py  non_linear_fit_source_galaxy.py  phase_for_kevin.py  pipeline_hyper_lens.py  pipeline_source_only.py  pipeline_x2_lens.py  release.sh  run_notesbooks.sh  run_pipeline.py  run_pipelines.sh  simlens.py  simulate_image.py  simulate_profiling_image.py
src/: exc.py
test/: conftest.py  fixtures.py  test_cli.py  test_config.py
test_autolens/: conftest.py  mock.py  test_config.py  test_simulate_and_fit.py
workspace/: doc
(+6827 files in other folders)
